[HT-585] - Layout, design and responsive fixes Task accelerator - Mobile 2 per row, Tablet 5 per row Task accelerator - Fixed padding and sizing on tablet Fixed general sizing and padding of fonts on tablet

--- a/health/sass/_shame.scss
+++ b/health/sass/_shame.scss
@@ -147,14 +147,15 @@
 
   // Task accelerator.
   &.block__count--5.block-id__topic-tile{
-    //@extend %colour-Primary-background;
-    //
     background: white;
     &.view-mode-full {
 
       .bean-block-content {
         a {
-          padding: uikit-space(1);
+          padding: uikit-space(.5);
+          @include uikit-media(md) {
+            padding: uikit-space(1);
+          }
           border: 0;
           display: block;
           overflow: hidden;
@@ -179,12 +180,11 @@
           &:focus {
             background: $colour-Primary-dark;
             .field-name-field-link-internal {
+              color: #fff;
               .field-item {
                 border-bottom: none;
               }
-            }
-            .field-name-field-link-internal {
-              color: #fff;
+
             }
 
             .field-name-field-image {
