--- a/health/sass/components/bands/_extends.scss
+++ b/health/sass/components/bands/_extends.scss
@@ -228,14 +228,12 @@ body {
 
     // contact hotline
     .paragraphs-item-para-contact {
-      padding: 0;
       text-align: center;
       p {
         margin-left: auto;
         margin-right: auto;
       }
       .view-mode-hotline_bar {
-        padding: uikit-space(0.5);
         .field-name-field-contact-telephone {
           svg {
             color: white;
